k8s/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: client 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        # resources:
        #   limits:
        #     memory: 512Mi
        #     cpu: "1"
        #   requests:
        #     memory: 256Mi
        #     cpu: "0.2"

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec: 
  type: NodePort
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
