k8s/comments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
  labels:
    app: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: comments 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4001
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"

---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec: 
  type: NodePort
  selector:
    app: comments
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
