k8s/event-bus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus
  labels:
    app: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: event-bus 
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 4005
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec: 
  type: NodePort
  selector:
    app: event-bus
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
