k8s/moderation.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation
  labels:
    app: moderation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: moderation 
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 4003
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"


---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec: 
  type: NodePort
  selector:
    app: moderation
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
