k8s/posts.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  labels:
    app: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: posts
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 4000
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"


---
apiVersion: v1
kind: Service
metadata:
  name:  posts-clusterip-srv
spec: 
  type: NodePort
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
