k8s/query.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query
  labels:
    app: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: query 
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 4002
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 512Mi
            cpu: "0.2"

---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec: 
  type: NodePort
  selector:
    app: query
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
